[gd_scene load_steps=6 format=3 uid="uid://ct1qj37p5o6bn"]

[ext_resource type="Script" path="res://Profiles/metaProgress/MetaShop.gd" id="1_k2mqh"]
[ext_resource type="Theme" uid="uid://detsu6arwhhvh" path="res://assets/mainTheme.tres" id="2_ayrdk"]
[ext_resource type="PackedScene" uid="uid://kcgx30huew1l" path="res://Profiles/profileStatViewer.tscn" id="3_7w0u8"]

[sub_resource type="InputEventKey" id="InputEventKey_be815"]
keycode = 4194305

[sub_resource type="Shortcut" id="Shortcut_2fls0"]
events = [SubResource("InputEventKey_be815")]

[node name="MetaShop" type="Node2D"]
script = ExtResource("1_k2mqh")

[node name="BackButton" type="Button" parent="."]
offset_left = 32.0
offset_top = 56.0
offset_right = 64.0
offset_bottom = 89.0
theme = ExtResource("2_ayrdk")
shortcut = SubResource("Shortcut_2fls0")
text = "<"

[node name="DmgUpButton" type="Button" parent="."]
offset_left = 150.0
offset_top = 150.0
offset_right = 313.0
offset_bottom = 218.0
theme = ExtResource("2_ayrdk")
text = "+ 1 raw Damge"

[node name="Label" type="Label" parent="DmgUpButton"]
layout_mode = 0
offset_top = 70.0
offset_right = 40.0
offset_bottom = 93.0

[node name="TowerCapButton" type="Button" parent="."]
offset_left = 150.0
offset_top = 300.0
offset_right = 313.0
offset_bottom = 368.0
theme = ExtResource("2_ayrdk")
text = "+ 1 tower cap"

[node name="Label" type="Label" parent="TowerCapButton"]
layout_mode = 0
offset_top = 70.0
offset_right = 40.0
offset_bottom = 93.0

[node name="MetaCoinChanceButton" type="Button" parent="."]
offset_left = 150.0
offset_top = 450.0
offset_right = 313.0
offset_bottom = 518.0
theme = ExtResource("2_ayrdk")
text = "+ 0.02 Metacaoin chance"

[node name="Label" type="Label" parent="MetaCoinChanceButton"]
layout_mode = 0
offset_top = 70.0
offset_right = 40.0
offset_bottom = 93.0

[node name="ProfileStatViewer" parent="." instance=ExtResource("3_7w0u8")]
position = Vector2(1576, 99)

[connection signal="pressed" from="BackButton" to="." method="_on_back_button_pressed"]
[connection signal="pressed" from="DmgUpButton" to="." method="_on_dmg_up_button_pressed"]
